<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questionParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".QuestionsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/titleFrame"
            android:layout_width="279dp"
            android:layout_height="78dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="68dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/questionView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/title_frame" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/alice"
            android:text="@string/heading"
            android:textColor="#B09CD8"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/questionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:padding="20dp"
            android:text="@string/question"
            android:textColor="#91E6FE"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionView"
            app:layout_constraintVertical_bias="0.19999999">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/pngitem_584233"
                android:button="@android:color/transparent"
                android:onClick="checkAns"
                android:paddingStart="31dp"
                android:paddingEnd="31dp"
                android:text="@string/radiobutton"
                android:textAlignment="center"
                android:textColor="#B18896"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="369dp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/pngitem_584233"
                android:button="@android:color/transparent"
                android:onClick="checkAns"
                android:paddingStart="31dp"
                android:paddingEnd="31dp"
                android:text="@string/radiobutton"
                android:textAlignment="center"
                android:textColor="#B18896"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="369dp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/pngitem_584233"
                android:button="@android:color/transparent"
                android:onClick="checkAns"
                android:paddingStart="31dp"
                android:paddingEnd="31dp"
                android:text="@string/radiobutton"
                android:textAlignment="center"
                android:textColor="#B18896"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="369dp" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/pngitem_584233"
                android:button="@android:color/transparent"
                android:onClick="checkAns"
                android:paddingStart="31dp"
                android:paddingEnd="31dp"
                android:text="@string/radiobutton"
                android:textAlignment="center"
                android:textColor="#B18896"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="369dp" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="nextQuestion"
            android:text="@string/next"
            android:textSize="16sp"
            app:iconGravity="end"
            app:iconSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.347" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scoreId"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:background="#4C49D1"
            android:checkable="false"
            android:clickable="false"
            android:text="@string/zero"
            android:textColor="#D4E2FE"
            android:textSize="20sp"
            app:backgroundTint="@color/design_default_color_secondary_variant"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>